react-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-nginx-deployment
  labels:
    app: react-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-nginx
  template:
    metadata:
      labels:
        app: react-nginx
    spec:
      containers:
      - name: react-nginx
        image: srinivas0001/react-app:latest
        ports:
        - containerPort: 80
