react-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-nginx-service
spec:
  selector:
    app: react-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
