react-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "192.168.49.2.nip.io"
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: react-nginx-service
            port:
              number: 80
